# incident-autopilot

./: .gitignore  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SETUP.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  docker-quick-start.ps1  docker-quick-start.sh
backend/: .dockerignore  .env.example  ARCHITECTURE.md  CENTRALIZED_LOGGING.md  Dockerfile  LANGSMITH_INTEGRATION.md  PRODUCTION_REFACTORING_COMPLETE.md  QUICKSTART.md  RAG_SYSTEM.md  README.md  cleanup_workflow.py  pyproject.toml  requirements.txt
backend/data/: dynatrace_metrics.json  jira_issues.json  knowledge_base.json  splunk_logs.json
backend/scripts/: init_knowledge_base.py
backend/src/: __init__.py
backend/src/agents/: __init__.py  analyzer_agent.py  assignment_agent.py  resolver_agent.py  validator_agent.py
backend/src/api/: __init__.py  main.py
backend/src/config/: langsmith.py  logger.py  settings.py
backend/src/schemas/: __init__.py  issue.py
backend/src/tasks/: __init__.py  analyzer_task.py  assignment_task.py  resolver_task.py  validator_task.py
backend/src/tools/: __init__.py
backend/src/workflows/: __init__.py  approval_based_workflow.py  issue_workflow.py  sequential_issue_workflow.py  workflow_state.py
frontend/: .dockerignore  .env.example  COMPLETE_SETUP.md  Dockerfile  FRONTEND_SETUP.md  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/components/: CreateIssue.css  CreateIssue.jsx  HealthStatus.css  HealthStatus.jsx  IssueResult.css  IssueResult.jsx
