[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-resolution-ai"
version = "1.0.0"
description = "Enterprise Ticket Resolution AI System - Agentic AI for real-time issue analysis, resolution, and assignment"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
disallow_untyped_defs = false
